packages/shulker-operator/src/reconcilers/minecraft_cluster/snapshots/shulker_operator__reconcilers__minecraft_cluster__proxy_service_account__tests__build_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_cluster/proxy_service_account.rs
expression: service_account
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/component: proxy-rbac
    app.kubernetes.io/instance: service-account-my-cluster
    app.kubernetes.io/managed-by: shulker-operator
    app.kubernetes.io/name: service-account
    app.kubernetes.io/part-of: cluster-my-cluster
    minecraftcluster.shulkermc.io/name: my-cluster
  name: shulker-my-cluster-proxy
  namespace: default

