packages/shulker-operator/src/reconcilers/minecraft_cluster/snapshots/shulker_operator__reconcilers__minecraft_cluster__proxy_service_account__tests__create_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_cluster/proxy_service_account.rs
expression: service_account
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/component: cluster
    app.kubernetes.io/name: my-cluster
    minecraftcluster.shulkermc.io/name: my-cluster
  name: my-cluster-proxy
  namespace: default

